--- a/index.html
+++ b/index.html
@@ -58,25 +58,14 @@
             <p class="project-desc"></p>
 
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <a class="media" href="/project/cities">
-                        <img src="img/cities.jpg" alt="work" class="media-img">
+                        <img src="img/paris.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Cities Project</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-6">
-                    <a class="media" href="/project/ss17">
-                        <img src="img/ss17logo.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>CCAD Summer Show 2017</p>
+                                <p class="media-title">Cities Project</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
@@ -86,23 +75,25 @@
             <div class="row">
                 <div class="col-sm-6">
                     <a class="media" href="/project/vinyl">
-                        <img src="img/vinyl.jpg" alt="work" class="media-img">
+                        <img src="img/vinyl/booklet2_crop.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>The Less I Know The Better</p>
+                                <p class="media-title">The Less I Know The Better</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6">
-                    <a class="media" href="/project/parmohouse">
-                        <img src="img/phlogo.jpg" alt="work" class="media-img">
+                    <a class="media" href="/project/ss17">
+                        <img src="img/ss17-teaser.gif" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>The Parmo House</p>
+                                <p class="media-title">CCAD Summer Show 2017</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
@@ -111,40 +102,58 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <a class="media" href="/project/sheffield">
-                        <img src="img/sheffield.jpg" alt="work" class="media-img">
+                    <a class="media" href="/project/parmohouse">
+                        <img src="img/ph_thumb.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Sheffield Branding</p>
+                                <p class="media-title">The Parmo House</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6">
+                    <a class="media" href="/project/sheffield">
+                        <img src="img/sheff_thumb.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p class="media-title">Sheffield Branding</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
                     <a class="media" href="/project/logo">
                         <img src="img/azmonogram.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Logo Collection</p>
+                                <p class="media-title">Logo Collection</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
-                <!-- <div class="col-sm-6">
-                    <a class="media" href="/project/amped">
-                        <img src="img/amped-icon.jpg" alt="work" class="media-img">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/miscom">
+                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p>Amped Music Night</p>
+                                <p class="media-title">Miscommunication</p>
+                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
             </div>
 
             <!-- <div class="row">
