--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <body>
-        <div class="sticky-header sticky-hide">
+        <!-- <div class="sticky-header sticky-hide">
             <div class="sticky-container">
                 <div class="sticky-logo">
                     <img src="img/mg-full.png" alt="">
@@ -50,12 +50,38 @@
                     <img src="img/logo.png" alt="Logo" class="logo-img">
                 </a>
             </div>
-        </header>
+        </header> -->
 
         <div class="wrapper">
-            <h1>Projects</h1>
+            <!-- <h1>Projects</h1>
             <hr>
-            <p class="project-desc"></p>
+            <p class="project-desc"></p> -->
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <a class="media">
+                        <img src="img/g.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay media-about">
+                            <div class="media-overlay-content media-content-about">
+                                <p>Hello, I'm Matthew, Junior Designer at Better Brand Agency.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6">
+                    <a class="media" href="/project/ss17">
+                        <img src="img/ss17logo.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p>CCAD Summer Show 2017</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-sm-6">
