--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Hi I'm Matthew, I'm a Graphic Designer based in Middlesbrough, UK.">
 
-        <title>Matthew Goodyear | Graphic Designer</title>
+        <title>Goodyear | Branding & Identity</title>
 
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
@@ -32,7 +32,7 @@
 
 
     <body>
-        <div class="sticky-header sticky-hide">
+        <!-- <div class="sticky-header sticky-hide">
             <div class="sticky-container">
                 <div class="sticky-logo">
                     <img src="img/mg-full.png" alt="">
@@ -42,65 +42,49 @@
                     <p>Contact</p>
                 </a>
             </div>
-        </div>
+        </div> -->
 
         <header>
-            <div class="logo-container">
-                <a class="logo-link" href="/">
-                    <img src="img/logo.png" alt="Logo" class="logo-img">
-                </a>
+            <div class="row">
+                <div class="col-sm-6 col-xs-12">
+                    <div class="logo-container">
+                        <a class="logo-link" href="/">
+                            <img src="img/MG_Logo_Dark@0.5x.png" alt="Logo" class="logo-img">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-xs-12">
+                    <ul class="links">
+                        <li><a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Start a project</a></li><!--
+                --></ul>
+                </div>
             </div>
         </header>
 
+
         <div class="wrapper">
+            <h1 class="first-el">I'm Matthew.</h1>
+            <hr align="left">
+            <h2>Based in the North East of England, I currently work for <a href="https://www.betterbrandagency.com/">Better Brand Agency</a> as a Graphic Designer. I have a passion for design and creating brands. I'm available for freelance projects and you can get in touch via Email or Instagram.</h2>
+
             <h1>Projects</h1>
-            <hr>
-            <p class="project-desc"></p>
+            <hr align="left">
 
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <a class="media" href="/project/cities">
-                        <img src="img/paris.jpg" alt="work" class="media-img">
+                        <img src="img/paris-thumb.jpg" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p class="media-title">Cities Project</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <a class="media" href="/project/vinyl">
-                        <img src="img/vinyl/booklet2_crop.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p class="media-title">The Less I Know The Better</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
+                                <p class="media-title">Cities Series</p>
+                                <p class="media-desc">Capturing the heart of cities from around the globe.</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
-                <div class="col-sm-6">
-                    <a class="media" href="/project/ss17">
-                        <img src="img/ss17-teaser.gif" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p class="media-title">CCAD Summer Show 2017</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
                 <div class="col-sm-6">
                     <a class="media" href="/project/parmohouse">
                         <img src="img/ph_thumb.jpg" alt="work" class="media-img">
@@ -108,20 +92,7 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">The Parmo House</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-6">
-                    <a class="media" href="/project/sheffield">
-                        <img src="img/sheff_thumb.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p class="media-title">Sheffield Branding</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
+                                <p class="media-desc">An industiral style restaurant, specialiing in a dish originating in Middlesbrough, England.</p>
                             </div>
                         </div>
                     </a>
@@ -130,13 +101,41 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <a class="media" href="/project/logo">
-                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
+                    <a class="media" href="/project/ss17">
+                        <img src="img/ss17-teaser.gif" alt="work" class="media-img">
 
                         <div class="media-overlay">
                             <div class="media-overlay-content">
-                                <p class="media-title">Logo Collection</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
+                                <p class="media-title">CCAD Summer Show 2017</p>
+                                <p class="media-desc">A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6">
+                    <a class="media" href="/project/vinyl">
+                        <img src="img/vinyl/booklet2_crop.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p class="media-title">The Less I Know The Better</p>
+                                <p class="media-desc">The third single from Tame Impala's third studio album, Currents.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <a class="media" href="/project/sheffield">
+                        <img src="img/sheff_thumb.jpg" alt="work" class="media-img">
+
+                        <div class="media-overlay">
+                            <div class="media-overlay-content">
+                                <p class="media-title">Sheffield</p>
+                                <p class="media-desc">A city in the eastern foothills of the Pennines, and the valleys of the River Don, Sheffield is known as the Steel City. Many innovations were developed locally, including crucible and stainless steel.</p>
                             </div>
                         </div>
                     </a>
@@ -149,72 +148,58 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">Miscommunication</p>
-                                <p class="media-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut purus eget metus feugiat elementum. Sed varius leo justo, eu lacinia orci dictum in. Nunc sodales magna nec leo egestas ultricies.</p>
+                                <p class="media-desc">An experimental typography project to show the issues with communication due to the rise of the digital age.</p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
 
-            <!-- <div class="row">
-                <div class="col-sm-6">
-                    <a class="media" href="/project/miscom">
-                        <img src="img/miscommunication.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Miscommunication</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-6">
-                    <a class="media" href="/project/logo">
-                        <img src="img/azmonogram.jpg" alt="work" class="media-img">
-
-                        <div class="media-overlay">
-                            <div class="media-overlay-content">
-                                <p>Logo Collection</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div> -->
-        </div>
-
-        <!-- <div class="row center-xs">
-            <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
-                <p>Get in Touch</p>
-            </a>
-        </div> -->
-
-        <!-- <div class="about">
-            <h1>About</h1>
-            <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
-
-            <h1>Contact</h1>
-            <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
+            <h1>Misc.</h1>
+            <hr align="left">
 
             <div class="row center-xs">
                 <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
-                    <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
-                    <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
+                      <img src="../../img/azmonogram.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/lumo.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/mg.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row center-xs">
+                <div class="col-sm-4">
+                      <img src="../../img/mykri.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/tofy1.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/tofy2.jpg" alt="work" class="media-img project-img">
+                </div>
+            </div>
+
+            <div class="row center-xs">
+                <div class="col-sm-4">
+                      <img src="../../img/chatdog.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/l.jpg" alt="work" class="media-img project-img">
+                </div>
+
+                <div class="col-sm-4">
+                      <img src="../../img/amped-icon.jpg" alt="work" class="media-img project-img">
                 </div>
             </div>
         </div>
-
-        <footer>
-            <div class="row center-xs">
-                <div class="col-xs-3">
-                    <img src="img/logo2.png" alt="work" class="media-img">
-                    <p>&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
-        </footer> -->
 
         <footer>
             <div class="row">
