--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- Script -->
-        <script src="https://use.fontawesome.com/43b23a385d.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,41 +31,24 @@
 
 
     <body>
-        <!-- <div class="sticky-header sticky-hide">
-            <div class="sticky-container">
-                <div class="sticky-logo">
-                    <img src="img/mg-full.png" alt="">
-                </div>
-
-                <a href="mailto:hello@matthewgoodyear.com" class="sticky-contact-btn">
-                    <p>Contact</p>
-                </a>
-            </div>
-        </div> -->
-
         <header>
-            <div class="row">
-                <div class="col-sm-6 col-xs-12">
-                    <div class="logo-container">
+            <div class="header-container">
+                <div class="row">
+                    <div class="col-sm-12">
                         <a class="logo-link" href="/">
                             <img src="img/MG_Logo_Dark@0.5x.png" alt="Logo" class="logo-img">
                         </a>
-                    </div>
-                </div>
 
-                <div class="col-sm-6 col-xs-12">
-                    <ul class="links">
-                        <li><a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Start a project</a></li><!--
-                --></ul>
+                        <p class="start-project"><a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Start a project</a></p>
+                    </div>
                 </div>
             </div>
         </header>
 
-
         <div class="wrapper">
-            <h1 class="first-el">I'm Matthew.</h1>
+            <h1 class="first-el">About</h1>
             <hr align="left">
-            <h2>Based in the North East of England, I currently work for <a href="https://www.betterbrandagency.com/">Better Brand Agency</a> as a Graphic Designer. I have a passion for design and creating brands. I'm available for freelance projects and you can get in touch via Email or Instagram.</h2>
+            <h2>I'm Matthew, I have a passion for design and creating brands. Based in the North East of England, I currently work for <a href="https://www.betterbrandagency.com/" class="better-link">Better Brand Agency</a> and I'm available for freelance projects. Get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> and follow me on <a href="https://www.instagram.com/designer.matt/">Instagram</a> to keep up to date with future projects.</h2>
 
             <h1>Projects</h1>
             <hr align="left">
@@ -79,7 +61,7 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">Cities Series</p>
-                                <p class="media-desc">Capturing the heart of cities from around the globe.</p>
+                                <p class="media-desc">Inspired by Lucas Fields' City Badges, this project captures the icon at the heart of cities around the globe.</p>
                             </div>
                         </div>
                     </a>
@@ -92,7 +74,7 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">The Parmo House</p>
-                                <p class="media-desc">An industiral style restaurant, specialiing in a dish originating in Middlesbrough, England.</p>
+                                <p class="media-desc">An industiral style restaurant, specialising in a dish originating in Middlesbrough, England.</p>
                             </div>
                         </div>
                     </a>
@@ -148,7 +130,7 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">Miscommunication</p>
-                                <p class="media-desc">An experimental typography project to show the issues with communication due to the rise of the digital age.</p>
+                                <p class="media-desc">An experimental typography project to show the issues with communication, due to the rise of the digital age.</p>
                             </div>
                         </div>
                     </a>
@@ -203,16 +185,14 @@
 
         <footer>
             <div class="row">
-                <div class="col-sm-6 col-xs-12">
+                <div class="col-sm-12">
                     <ul class="links">
                         <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
                      --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
                      --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
                 --></ul>
-                </div>
 
-                <div class="col-sm-6 col-xs-12">
-                    <p>&copy; Matthew Goodyear 2017</p>
+                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
         </footer>
