--- a/project/logo/index.html
+++ b/project/logo/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
 
-        <title>Matthew Goodyear | Logo Collection</title>
+        <title>Goodyear | Logo Collection</title>
 
         <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
 
@@ -13,7 +13,6 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- Script -->
-        <script src="https://use.fontawesome.com/43b23a385d.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,29 +31,23 @@
 
 
     <body>
-        <div class="sticky-header sticky-hide">
-            <div class="sticky-container">
-                <div class="sticky-logo">
-                    <img src="../../img/mg-full.png" alt="">
-                </div>
-
-                <a href="mailto:hello@matthewgoodyear.com" class="sticky-contact-btn">
-                    <p>Contact</p>
-                </a>
-            </div>
-        </div>
-
         <header>
-            <div class="logo-container">
-                <a class="logo-link" href="/">
-                    <img src="../../img/logo.png" alt="Logo" class="logo-img">
-                </a>
+            <div class="header-container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <a class="logo-link" href="/">
+                            <img src="../../img/MG_Logo_Dark@0.5x.png" alt="Logo" class="logo-img">
+                        </a>
+
+                        <p class="start-project"><a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Start a project</a></p>
+                    </div>
+                </div>
             </div>
         </header>
 
         <div class="wrapper">
             <h1>Logo Collection</h1>
-            <hr>
+            <hr align="left">
             <p class="project-desc"></p>
 
             <div class="row center-xs">
@@ -100,51 +93,16 @@
             </div>
         </div>
 
-        <!-- <div class="row center-xs">
-            <a href="mailto:hello@matthewgoodyear.com" class="contact-btn col-xs-6 col-sm-3 col-md-2">
-                <p>Get in Touch</p>
-            </a>
-        </div>
-
-        <div class="about">
-            <h1>About</h1>
-            <hr>
-            <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
-
-            <h1>Contact</h1>
-            <hr>
-            <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
-
-            <div class="row center-xs">
-                <div class="col-sm-4">
-                    <a class="fa fa-instagram fa-3x icons" aria-hidden="true" href="https://www.instagram.com/designer.matt/"></a>
-                    <a class="fa fa-500px fa-3x icons" aria-hidden="true" href="https://500px.com/matthewgoodyear"></a>
-                    <a class="fa fa-envelope-o fa-3x icons" aria-hidden="true" href="mailto:hello@matthewgoodyear.com"></a>
-                </div>
-            </div>
-        </div>
-
-        <footer>
-            <div class="row center-xs">
-                <div class="col-xs-3">
-                    <img src="../../img/logo2.png" alt="Logo">
-                    <p>&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
-        </footer> -->
-
         <footer>
             <div class="row">
-                <div class="col-sm-6 col-xs-12">
+                <div class="col-sm-12">
                     <ul class="links">
                         <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
                      --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
                      --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
                 --></ul>
-                </div>
 
-                <div class="col-sm-6 col-xs-12">
-                    <p>&copy; Matthew Goodyear 2017</p>
+                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
                 </div>
             </div>
         </footer>
