--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <div class="media-overlay">
                             <div class="media-overlay-content">
                                 <p class="media-title">Cities Series</p>
-                                <p class="media-desc">Inspired by Lucas Fields' City Badges, this project captures the icon at the heart of cities around the globe.</p>
+                                <p class="media-desc">Inspired by Lucas Fields' City Badges, this growing series includes various cities from around the globe and recreates their most prominent landmark in a minimal form.</p>
                             </div>
                         </div>
                     </a>
@@ -140,7 +140,7 @@
             <h1>Misc.</h1>
             <hr align="left">
 
-            <div class="row center-xs">
+            <div class="row">
                 <div class="col-sm-4">
                       <img src="../../img/azmonogram.jpg" alt="work" class="media-img project-img">
                 </div>
@@ -154,7 +154,7 @@
                 </div>
             </div>
 
-            <div class="row center-xs">
+            <div class="row">
                 <div class="col-sm-4">
                       <img src="../../img/mykri.jpg" alt="work" class="media-img project-img">
                 </div>
@@ -168,7 +168,7 @@
                 </div>
             </div>
 
-            <div class="row center-xs">
+            <div class="row">
                 <div class="col-sm-4">
                       <img src="../../img/chatdog.jpg" alt="work" class="media-img project-img">
                 </div>
@@ -184,19 +184,13 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="links">
-                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
-                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
-                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
-                --></ul>
+            <ul class="links">
+                <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+             --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+             --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+        --></ul>
 
-                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
+            <p class="copyright">&copy; Matthew Goodyear 2017</p>
         </footer>
-
-        <script type="text/javascript" src="/scripts/header.js"></script>
     </body>
 </html>
