--- a/project/cities/index.html
+++ b/project/cities/index.html
@@ -49,7 +49,7 @@
         <div class="wrapper">
             <h1>Cities Project</h1>
             <hr align="left">
-            <p class="project-desc"></p>
+            <h2>Inspired by Lucas Fields' City Badges, this growing series includes various cities from around the globe and recreates their most prominent landmark in a minimal form.</h2>
 
             <div class="row">
                 <div class="col-sm-6">
@@ -113,19 +113,13 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="links">
-                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
-                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
-                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
-                --></ul>
+            <ul class="links">
+                <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+             --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+             --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+        --></ul>
 
-                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
+            <p class="copyright">&copy; Matthew Goodyear 2017</p>
         </footer>
-
-        <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
