--- a/project/sheffield/index.html
+++ b/project/sheffield/index.html
@@ -49,7 +49,7 @@
         <div class="wrapper">
             <h1>Sheffield Branding</h1>
             <hr align="left">
-            <p class="project-desc"></p>
+            <h2>A city in the eastern foothills of the Pennines, and the valleys of the River Don, Sheffield is known as the Steel City. Many innovations were developed locally, including crucible and stainless steel.</h2>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -71,19 +71,13 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="links">
-                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
-                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
-                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
-                --></ul>
+            <ul class="links">
+                <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+             --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+             --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+        --></ul>
 
-                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
+            <p class="copyright">&copy; Matthew Goodyear 2017</p>
         </footer>
-
-        <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
