--- a/project/parmohouse/index.html
+++ b/project/parmohouse/index.html
@@ -49,7 +49,7 @@
         <div class="wrapper">
             <h1>The Parmo House</h1>
             <hr align="left">
-            <p class="project-desc"></p>
+            <h2>An industiral style restaurant, specialising in a dish originating in Middlesbrough, England.</h2>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -81,19 +81,13 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="links">
-                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
-                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
-                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
-                --></ul>
+            <ul class="links">
+                <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+             --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+             --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+        --></ul>
 
-                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
+            <p class="copyright">&copy; Matthew Goodyear 2017</p>
         </footer>
-
-        <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
