--- a/project/ss17/index.html
+++ b/project/ss17/index.html
@@ -48,7 +48,7 @@
         <div class="wrapper">
             <h1>CCAD Summer Show 2017</h1>
             <hr align="left">
-            <p class="project-desc"></p>
+            <h2>A bold, dynamic identity for the anual summer show at Cleveland College of Art and Design. It's a showcase of creativity by upcoming talent.</h2>
 
             <div class="row">
                 <div class="col-sm-12">
@@ -88,19 +88,13 @@
         </div>
 
         <footer>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="links">
-                        <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
-                     --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
-                     --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
-                --></ul>
+            <ul class="links">
+                <li><a href="https://www.instagram.com/designer.matt/">Instagram</a></li><!--
+             --><li><a href="mailto:hello@matthewgoodyear.com">Email</a></li><!--
+             --><li><a href="https://500px.com/matthewgoodyear">500PX</a></li><!--
+        --></ul>
 
-                    <p class="copyright">&copy; Matthew Goodyear 2017</p>
-                </div>
-            </div>
+            <p class="copyright">&copy; Matthew Goodyear 2017</p>
         </footer>
-
-        <script type="text/javascript" src="../../scripts/header.js"></script>
     </body>
 </html>
