--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1 class="first-el">About</h1>
             <hr align="left">
             <h2>
-                I'm Matthew, I have a passion for design and creating brands. Based in the North East of England, I currently work for <a href="https://www.betterbrandagency.com/" class="better-link">Better Brand Agency</a> and I'm available for freelance projects. Get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> and follow me on <a href="https://www.instagram.com/designer.matt/">Instagram</a> to keep up to date with future projects.
+                I'm Matthew, I have a passion for logo and brand identity design. Based in the North East of England, I currently work for <a href="https://www.betterbrandagency.com/" class="better-link">Better Brand Agency</a> and I'm available for freelance projects. Get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> and follow me on <a href="https://www.instagram.com/designer.matt/">Instagram</a> to keep up to date with future projects.
             </h2>
 
             <h1>Projects</h1>
