--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </header> -->
 
         <div class="wrapper">
-            <!-- <h2>Projects</h2>
+            <!-- <p>Projects</p>
             <hr>
             <p class="project-desc"></p> -->
 
@@ -216,11 +216,11 @@
         </div> -->
 
         <!-- <div class="about">
-            <h2>About</h2>
+            <p>About</p>
             <hr>
             <p>Hi, I'm a Graphic Designer based in Middlesbrough, UK. I'm currently a Junior Designer at <a href="https://www.betterbrandagency.com/">Better Brand Agency</a>.</p>
 
-            <h2>Contact</h2>
+            <p>Contact</p>
             <hr>
             <p>I'm available for freelance projects, get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> or <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</p>
 
